<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">


    <ImageButton
        android:id="@+id/expanded_menu"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:background="@color/transparent"
        android:contentDescription="@string/menu_bar"
        app:layout_constraintEnd_toStartOf="@+id/logo_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/notif_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:contentDescription="@string/notif_icon"
        android:maxWidth="102dp"
        android:maxHeight="102dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/logo_home"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="98dp"
        android:layout_height="102dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

    <TextView
        android:id="@+id/name_profile_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_black"
        android:text="@string/name"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_light"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/name_profile_home" />

    <TextView
        android:id="@+id/credit_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_light"
        android:text="@string/credit_points"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/full_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_for_searchbar"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_black"
        android:text="@string/home_title"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/services_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_black"
        android:text="@string/services_title"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />

</androidx.constraintlayout.widget.ConstraintLayout>