<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/expanded_menu"
        android:layout_width="55dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu_bar"
        android:background="@color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/logo_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_black_24dp" />

    <ImageView
        android:id="@+id/logo_home"
        android:contentDescription="@string/logo"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/notif_home"
        android:contentDescription="@string/notif_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/logo_home"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notifications_white_24dp" />

    <ImageView
        android:id="@+id/profile_picture"
        android:contentDescription="@string/profile_picture"
        android:layout_width="98dp"
        android:layout_height="102dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_home"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_profile_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:fontFamily="@font/worksans_black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:fontFamily="@font/worksans_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/name_profile_home" />

    <TextView
        android:id="@+id/credit_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/credit_points"
        android:textColor="@color/white"
        android:fontFamily="@font/worksans_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/full_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/logo_home"
        app:srcCompat="@drawable/quantum_ic_play_arrow_white_24" />

    <SearchView
        android:id="@+id/searchView"
        android:background="@drawable/border_for_searchbar"
        android:paddingBottom="5dp"
        android:layout_width="416dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/home_title"
        android:fontFamily="@font/worksans_black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/services_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="8dp"
        android:text="@string/services_title"
        android:fontFamily="@font/worksans_black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />
</android.support.constraint.ConstraintLayout>