<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="98dp"
                android:layout_height="102dp"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.022"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/avatar1" />

            <TextView
                android:id="@+id/credit_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/worksans_light"
                android:text="@string/credit_points"
                android:textColor="#0a0a0a"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <TextView
                android:id="@+id/name_profile_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_black"
                android:text="@string/name"
                android:textSize="20dp"
                android:textColor="#334AC9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_light"
                android:text="@string/phone_number"
                android:textColor="#0a0a0a"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/name_profile_home" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_medium"
        android:text="Transaction History"
        android:textColor="#334AC9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview" />

    <TextView
        android:id="@+id/explore_menu4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FDFDFD"
        android:fontFamily="@font/rubik_mono_one"
        android:gravity="center"
        android:text="recycler view"
        android:textColor="#313131"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>