<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_page_layout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="98dp"
                android:layout_height="102dp"
                android:background="@color/chrome_black"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.022"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/avatar1" />

            <!--            <ImageButton-->
            <!--                android:id="@+id/profile"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                android:background="@color/transparent"-->
            <!--                android:contentDescription="@string/full_profile"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="0.936"-->
            <!--                app:layout_constraintStart_toEndOf="@+id/profile_picture"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp" />-->

            <TextView
                android:id="@+id/credit_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/worksans_light"
                android:text="@string/credit_points"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <TextView
                android:id="@+id/name_profile_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_light"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/name_profile_home" />

            <ImageButton
                android:id="@+id/add_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_add_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toEndOf="@+id/credit_points"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>